--- a/index.html
+++ b/index.html
@@ -131,21 +131,83 @@
 		<div class="container" style="margin-top: 0">
 			<h1>City of Muskogee 
 				<br><span style="font-weight: normal;">Comprehensive Housing Study</span></h1>
-		<div class="row">
-			<div class="eight columns" style="margin-top: 2%;">
-				<p>This dashboard supports the City of Muskogee's Comprehensive Housing Study, conducted by <a href="https://communityscale.io/" target="_blank" rel="noopener noreferrer">CommunityScale</a> on behalf of the City's <a href="https://www.muskogeeonline.org/departments/economic-development/index.php" target="_blank" rel="noopener noreferrer">Economic Development Department</a>.</p>
-				<div class="chip-container">
-					<a href="#Overview"><button class="button-primary">Purpose of this plan</button></a>
+			<div class="row">
+				<div class="eight columns" style="margin-top: 2%;">
+					<p>This dashboard supports the City of Muskogee's Comprehensive Housing Study, conducted by <a href="https://communityscale.io/" target="_blank" rel="noopener noreferrer">CommunityScale</a> on behalf of the City's <a href="https://www.muskogeeonline.org/departments/economic-development/index.php" target="_blank" rel="noopener noreferrer">Economic Development Department</a>.</p>
+					<div class="chip-container">
+						<a href="#Overview"><button class="button-primary">Purpose of this plan</button></a>
 						<a href="#Findings"><button class="button-primary">Key indicators from the analysis</button></a>
 						<a href="#Production"><button class="button-primary">Housing production target</button></a>
 						<a href="#Strategies"><button class="button-primary">Draft strategies from the plan</button></a>
-						<!--
-					<a href="survey.html"><button class="button-primary"><span class="fa fa-user"></span>Take the housing survey</button></a>
-					-->
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
+	<div class="container" id="Overview">
+		<div class="row">
+			<div class="six columns" style="margin-top: 2%">
+				<h3>The Comprehensive Housing Study's purpose</h3>
+					<p>The City of Muskogee’s Economic Development Department has commissioned this housing study to assess current housing conditions, identify needs, and recommend strategies for future development. The outcome will guide policy decisions and housing strategies to enhance the community’s quality of life.</p>
+			</div>
+			<div class="six columns" style="margin-top: 2%">
+					<img src="images/theme/Muskogee library.jpg" width="100%">
+			</div>
+		</div>
+	
+		<div class="row">
+			<h5>Goals for this study:</h5>
+			<div class="boxes">
+				<div class="box">
+					<div class="large-icon">
+						<img src="images/theme/Frame 7.png" class="inline-image">
+					</div>
+					<h5>Assess housing conditions and need in Muskogee across income levels household types.</h5>
+				</div>
+				<div class="box">
+					<div class="large-icon">
+						<img src="images/theme/Frame 3.png" class="inline-image">
+					</div>
+					<h5>Identify the market potential for new housing, including rental and homeownership product types.</h5>
+				</div>
+				<div class="box">
+					<div class="large-icon">
+						<img src="images/theme/Frame 2.png" class="inline-image">
+					</div>
+					<h5>Establish a production target for new development over the next decade.</h5>							
+				</div>
+				<div class="box">
+					<div class="large-icon">
+						<img src="images/theme/Frame 4.png">
+					</div>
+					<h5>Inform policy solution, funding sources, and investment strategies to catalyze new housing.</h5>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="divider" id="Findings" style="background:linear-gradient(to right,rgba(255, 255, 255, 0.9),rgba(255, 255, 255, 0.8)), url(images/theme/Muskogee\ Main\ Street-wide.jpg); background-repeat: no-repeat; background-size: cover">
+		<div class="container">
+			<div class="twelve columns center-align">
+				<div class="divider-header">
+					<h2 class="inline-text">Key indicators</h2>
+				</div>
+				<h6>Though Muskogee has not seen new growth for years, the city is well-positioned to capture a greater share of the region's overall growth and channel new investment into its downtown, historic neighborhoods, and surrounding developable areas.</h6>
+				<div class="chip-container">
+					<a href="#Growth"><button class="button-primary">Growth</button></a>
+					<a href="#Affordability"><button class="button-primary">Affordability</button></a>
+					<a href="#Development"><button class="button-primary">Construction</button></a>
+					<a href="#Non-homestead"><button class="button-primary">Non-homestead</button></a>
+					<a href="#Workforce"><button class="button-primary">Workforce</button></a>
+					<a href="#Aging"><button class="button-primary">Aging</button></a>
+					<a href="#Schools"><button class="button-primary">Schools</button></a>
+					<a href="#Barriers"><button class="button-primary">Barriers</button></a>
+					<a href="#Production"><button class="button-primary">Housing need</button></a>
+					<a href="#Goals"><button class="button-primary">Housing goal</button></a>
+					<a href="#Strategies"><button class="button-primary">Strategies</button></a>
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<!-- 
@@ -153,25 +215,72 @@
 |    OVERVIEW            |
 ╰────────────────────────╯
 -->
+<div class="divider" id="Vision" style="margin-top: 0%; padding-top: 0; margin-bottom: 0%; padding-bottom: 0;">
+	<div class="container" style="margin-bottom: 0%; padding-bottom: 0;">
 
-
-	<div class="divider" id="Vision" style="margin-top: 0%; padding-top: 0; margin-bottom: 0%; padding-bottom: 0;">
-		<div class="container" style="margin-bottom: 0%; padding-bottom: 0;">
-			
-			<div class="row insight-box" id="Map">
-				<!-- Heading Row -->
-				<div class="twelve columns" style="margin-bottom: 0%;">
-					<h3>Eastside Economic Mobility District interactive map</h3>
-					<p>The map below provides interactive data layers to support this study. Layers will be added as they are developed during the process. <a href="indyEastMaps.html" target="_blank" >Open in a new window.</a></p>
-				</div>
-				<!-- Main Content Row -->
-				<div class="twelve columns" style="margin-top: 2%; margin-left: 0;">
-					<iframe src="indyEastMaps.html" width="100%" height="600px" scrolling="no" style="border: none; overflow-x: hidden; overflow-y: auto;"></iframe>
-				</div>
+		<div class="row insight-box" id="Growth">
+			<!-- Heading Row -->
+			<div class="twelve columns" style="margin-bottom: 0%;">
+				<h3>Muskogee is poised to turn the corner on growth.</h3>
 			</div>
-
+			<!-- Main Content Row -->
+			<div class="four columns" style="margin-top: 2%; margin-left: 0;">
+				<p>Muskogee has been gradually  losing households over the past decade. Without new action, this trend is likely to continue.</p>
+				<p>However, the broader region is experiencing significant positive growth. With the right policy interventions and strategic investments, Muskogee could capture a share of this regional growth and turn the corner toward building its housing supply and household population again.</p>
+			</div>
+			<div class="eight columns" style="margin-top: 2%">
+				<iframe title="Muskogee household growth projection" aria-label="Interactive line chart" id="datawrapper-chart-dJetr" src="https://datawrapper.dwcdn.net/dJetr/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="471" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}}))}();
+				</script>
+			</div>
 		</div>
+			
+		<div class="row insight-box" id="Affordability">
+			<!-- Heading Row -->
+			<div class="twelve columns" style="margin-bottom: 0%;">
+				<h3>Muskogee remains affordable for most middle-income households.</h3>
+			</div>
+			<!-- Main Content Row -->
+			<div class="four columns" style="margin-top: 2%; margin-left: 0;">
+				<p>Even after prices and interest rates jumped post-Covid, Muskogee remains an affordable place to buy a home for most local households.</p>
+				<p>As the table illustrates, a household earning the median income (estimated at $52,722 in 2025) can comfortably afford the price of a typical home on today’s market in the city.</p>
+				<p>Housing within Muskogee is considerably more affordable than in other parts of the county or the greater Tulsa region.</p>
+			</div>
+			<div class="eight columns" style="margin-top: 2%">
+				<iframe title="How affordable is Muskogee?" aria-label="Interactive line chart" id="datawrapper-chart-REFdk" src="https://datawrapper.dwcdn.net/REFdk/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="467" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}}))}();
+				</script>
+			</div>
+		</div>
+
+		<div class="row insight-box" id="Supply">
+			<!-- Heading Row -->
+			<div class="twelve columns" style="margin-bottom: 0%;">
+				<h3>Muskogee’s declining household population seems driven by lost housing supply, not lack of demand.</h3>
+			</div>
+			<!-- Main Content Row -->
+			<div class="four columns" style="margin-top: 2%; margin-left: 0;">
+				<p>Muskogee’s household population has gradually declined over the past decade and is on track to continue doing so. However, this seems driven at least in part by the fact that the city loses an average of 100 units per year to vacancy and demolition.</p>
+				<p>By reversing this trend toward a stable or growing housing stock, Muskogee would likely see household population rise again, especially given the region’s strong demand for new housing.</p>
+			</div>
+			<div class="eight columns" style="margin-top: 2%">
+				<iframe title="Comparing total households and total units over time" aria-label="Interactive line chart" id="datawrapper-chart-3PPjw" src="https://datawrapper.dwcdn.net/3PPjw/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="427" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}}))}();
+				</script>
+			</div>
+		</div>
+
+		<div class="row insight-box" id="Map">
+			<!-- Heading Row -->
+			<div class="twelve columns" style="margin-bottom: 0%;">
+				<h3>Eastside Economic Mobility District interactive map</h3>
+				<p>The map below provides interactive data layers to support this study. Layers will be added as they are developed during the process. <a href="indyEastMaps.html" target="_blank" >Open in a new window.</a></p>
+			</div>
+			<!-- Main Content Row -->
+			<div class="twelve columns" style="margin-top: 2%; margin-left: 0;">
+				<iframe src="indyEastMaps.html" width="100%" height="600px" scrolling="no" style="border: none; overflow-x: hidden; overflow-y: auto;"></iframe>
+			</div>
+		</div>
+	
 	</div>
+</div>
 
 
 	<!-- 
