--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<a href="#Top"><span class="fa fa-arrow-up"></span> Top</a>
 						<a href="#Overview">Overview </a>
 						<a href="#Findings">Key indicators </a>
-						<a href="#Strategies">Strategies</a>
+						<!-- <a href="#Strategies">Strategies</a> -->
 					</div>
 					<div id="clickDiv" class="mobile-menu-icon">
 						<a class="menu-icon">
@@ -121,7 +121,7 @@
 				<a href="#Top"><span class="fa fa-arrow-up"></span> Top</a>
 				<a href="#Overview">Overview </a>
 				<a href="#Findings">Key indicators </a>
-				<a href="#Strategies">Strategies</a>
+				<!-- <a href="#Strategies">Strategies</a> -->
 			</div>
 		</div>
 	</div>
@@ -137,8 +137,8 @@
 					<div class="chip-container">
 						<a href="#Overview"><button class="button-primary">Purpose of this plan</button></a>
 						<a href="#Findings"><button class="button-primary">Key indicators from the analysis</button></a>
-						<a href="#Production"><button class="button-primary">Housing production target</button></a>
-						<a href="#Strategies"><button class="button-primary">Draft strategies from the plan</button></a>
+						<a href="#Target"><button class="button-primary">Housing production target</button></a>
+						<a href="#Strategies"><button class="button-primary">Strategies</button></a>
 					</div>
 				</div>
 			</div>
@@ -194,16 +194,17 @@
 				</div>
 				<h6>Though Muskogee has not seen new growth for years, the city is well-positioned to capture a greater share of the region's overall growth and channel new investment into its downtown, historic neighborhoods, and surrounding developable areas.</h6>
 				<div class="chip-container">
-					<a href="#Growth"><button class="button-primary">Growth</button></a>
+					<a href="#Potential"><button class="button-primary">Potential</button></a>
 					<a href="#Affordability"><button class="button-primary">Affordability</button></a>
-					<a href="#Development"><button class="button-primary">Construction</button></a>
-					<a href="#Non-homestead"><button class="button-primary">Non-homestead</button></a>
+					<a href="#Decline"><button class="button-primary">Decline</button></a>
+					<a href="#History"><button class="button-primary">History</button></a>
+					<a href="#Burden"><button class="button-primary">Cost burden</button></a>
+					<a href="#Subsidy"><button class="button-primary">Subsidy</button></a>
 					<a href="#Workforce"><button class="button-primary">Workforce</button></a>
-					<a href="#Aging"><button class="button-primary">Aging</button></a>
-					<a href="#Schools"><button class="button-primary">Schools</button></a>
+					<a href="#Neighborhoods"><button class="button-primary">Neighborhoods</button></a>
+					<a href="#Growth"><button class="button-primary">Growth</button></a>
+					<a href="#Target"><button class="button-primary">Target</button></a>
 					<a href="#Barriers"><button class="button-primary">Barriers</button></a>
-					<a href="#Production"><button class="button-primary">Housing need</button></a>
-					<a href="#Goals"><button class="button-primary">Housing goal</button></a>
 					<a href="#Strategies"><button class="button-primary">Strategies</button></a>
 				</div>
 			</div>
@@ -218,7 +219,7 @@
 <div class="divider" id="Vision" style="margin-top: 0%; padding-top: 0; margin-bottom: 0%; padding-bottom: 0;">
 	<div class="container" style="margin-bottom: 0%; padding-bottom: 0;">
 
-		<div class="row insight-box" id="Growth">
+		<div class="row insight-box" id="Potential">
 			<!-- Heading Row -->
 			<div class="twelve columns" style="margin-bottom: 0%;">
 				<h3>Muskogee is poised to turn the corner on growth.</h3>
@@ -251,7 +252,7 @@
 			</div>
 		</div>
 
-		<div class="row insight-box" id="Supply">
+		<div class="row insight-box" id="Decline">
 			<!-- Heading Row -->
 			<div class="twelve columns" style="margin-bottom: 0%;">
 				<h3>Muskogee’s declining household population seems driven by lost housing supply, not lack of demand.</h3>
@@ -267,18 +268,177 @@
 			</div>
 		</div>
 
-		<div class="row insight-box" id="Map">
+		<div class="row insight-box" id="History">
 			<!-- Heading Row -->
 			<div class="twelve columns" style="margin-bottom: 0%;">
-				<h3>Eastside Economic Mobility District interactive map</h3>
-				<p>The map below provides interactive data layers to support this study. Layers will be added as they are developed during the process. <a href="indyEastMaps.html" target="_blank" >Open in a new window.</a></p>
+				<h3>Muskogee needs to build housing faster to replace lost units and rekindle household population growth.</h3>
+				<p>The vast majority of Muskogee’s current housing stock was built in prior decades, especially between 1950 and 1990. Recently, the city has added fewer units per year than it has lost.</p>
 			</div>
 			<!-- Main Content Row -->
-			<div class="twelve columns" style="margin-top: 2%; margin-left: 0;">
-				<iframe src="indyEastMaps.html" width="100%" height="600px" scrolling="no" style="border: none; overflow-x: hidden; overflow-y: auto;"></iframe>
+			<div class="six columns" style="margin-top: 2%; margin-left: 0;">
+				<iframe title="Existing units by year built" aria-label="Table" id="datawrapper-chart-hbGfm" src="https://datawrapper.dwcdn.net/hbGfm/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="396" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}}))}();
+				</script>
+			</div>
+			<div class="six columns" style="margin-top: 2%">
+				<iframe title="Building permits compared to lost units per year" aria-label="Interactive line chart" id="datawrapper-chart-uMpOD" src="https://datawrapper.dwcdn.net/uMpOD/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="406" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}}))}();
+				</script>
+			</div>
+		</div>
+
+		<div class="row insight-box" id="Burden">
+			<!-- Heading Row -->
+			<div class="twelve columns" style="margin-bottom: 0%;">
+				<h3>More housing production would help relieve pressure on lower-income households that are struggling to find affordable options.</h3>
+			</div>
+			<!-- Main Content Row -->
+			<div class="four columns" style="margin-top: 2%; margin-left: 0;">
+				<p>There is significant competition for housing affordable to lower-income households in Muskogee. Adding more housing at all price points would help reduce this competition and preserve affordable prices. In general, communities that build new housing at faster rates tend to experience slower increases in local housing costs than those that build slower.</p>
+				<p>Households are cost burdened when paying more than 30% of their income on housing costs. They are considered severely cost burdened when these costs exceed 50% of their income. For renters, this includes lease rent and utilities. For homeowners, this includes mortgage costs, property taxes, insurance, utilities, and any condo fees.</p>
+			</div>
+			<div class="eight columns" style="margin-top: 2%">
+				<iframe title="Cost burdened households by income group" aria-label="Stacked Bars" id="datawrapper-chart-k9NzQ" src="https://datawrapper.dwcdn.net/k9NzQ/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="188" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}}))}();
+				</script>
+			</div>
+		</div>
+
+		<div class="row insight-box" id="Subsidy">
+			<!-- Heading Row -->
+			<div class="twelve columns" style="margin-bottom: 0%;">
+				<h3>Muskogee provides housing support for low-income households but many vouchers go unused.</h3>
+			</div>
+			<!-- Main Content Row -->
+			<div class="four columns" style="margin-top: 2%; margin-left: 0;">
+				<p>Muskogee benefits from significant federal support to help house low-income households. However, the Housing Authority reports up to 200 Housing Choice Vouchers remain unused because local landlords are unwilling to accept them. If this trend continues too long, HUD may begin revoking portions of unused vouchers.</p>
+			</div>
+			<div class="eight columns" style="margin-top: 2%">
+				<iframe title="HUD subsidized affordable units by program" aria-label="Stacked Bars" id="datawrapper-chart-sILRe" src="https://datawrapper.dwcdn.net/sILRe/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="219" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}}))}();
+				</script>
+			</div>
+		</div>
+
+		<div class="row insight-box" id="Workforce">
+			<!-- Heading Row -->
+			<div class="twelve columns" style="margin-bottom: 0%;">
+				<h3>Most of Muskogee’s workforce chooses to live nearby, but lack of available housing leads many to locate just outside the city limits.</h3>
+			</div>
+			<!-- Main Content Row -->
+			<div class="four columns" style="margin-top: 2%; margin-left: 0;">
+				<p>While some people commute longer distances, most of the people who work in Muskogee live within or just outside the city. The most popular neighborhoods outside of Muskogee are concentrated in Fort Gibson and the Hilldale school district.</p>
+				<p>Muskogee does not have enough available housing to attract more of these households into the city.</p>
+			</div>
+			<div class="eight columns" style="margin-top: 2%">
+				<img src="images/muskogee-workers-map.jpg" width="100%">
+				<figcaption style="font-size: 0.8rem; margin-top: 0.5rem;">Where people live who work in Muskogee.</figcaption>
+			</div>
+		</div>
+
+		<div class="row insight-box" id="Neighborhoods">
+			<!-- Heading Row -->
+			<div class="twelve columns" style="margin-bottom: 0%;">
+				<h3>Muskogee includes several stable and desirable neighborhoods that are competitive with Fort Gibson and Hilldale.</h3>
+			</div>
+			<!-- Main Content Row -->
+			<div class="four columns" style="margin-top: 2%; margin-left: 0;">
+				<p>Especially on the east side, many of Muskogee’s neighborhoods are at least as stable and desirable as those in competing neighborhoods just outside the city line. This market strength represents a solid foundation to build from as Muskogee seeks to attract more people, families, and local employees to live in the city.</p>
+				<p>The neighborhoods in Muskogee that are less competitive in today’s market represent inventories lower-cost housing and vacant properties that could be systematically renovated and rebuilt over time to provide a renewed supply of quality, attainable housing stock.</p>
+				<img src="images/neighborhood-condition-legend.jpg" width="100%">
+			</div>
+			<div class="eight columns" style="margin-top: 2%">
+				<iframe src="muskogeeNCDraft.html" width="100%" height="600px" scrolling="no" style="border: none; overflow-x: hidden; overflow-y: auto;"></iframe>
+				<p>Housing and neighborhood assessment.</p>
+			</div>
+		</div>
+
+		<div class="row insight-box" id="Growth">
+			<!-- Heading Row -->
+			<div class="twelve columns" style="margin-bottom: 0%;">
+				<h3>The region is growing, especially among higher income households that could afford renovated homes and new construction.</h3>
+			</div>
+			<!-- Main Content Row -->
+			<div class="four columns" style="margin-top: 2%; margin-left: 0;">
+				<p>The Muskogee region is expected to grow by about 1,725 households over the next 10 years. About 1,500 of these net-new households earn annual incomes above $80,000, making them particularly equipped to pay market rate prices for new houses and apartments.</p>
+				<p>Muskogee should strategically position to attract a share of this new growth, especially the higher-earners who can help support new development of market rate housing.</p>
+			</div>
+			<div class="eight columns" style="margin-top: 2%">
+				<iframe title="Regional household growth by household income" aria-label="Interactive area chart" id="datawrapper-chart-f0aDo" src="https://datawrapper.dwcdn.net/f0aDo/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="434" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}}))}();
+				</script>
+			</div>
+		</div>
+
+		<div class="row insight-box" id="Target">
+			<!-- Heading Row -->
+			<div class="twelve columns" style="margin-bottom: 0%;">
+				<h3>Muskogee has the potential to add at least 1,500 net-new, market-rate units over the next decade by capturing a greater share of the region’s growth.</h3>
+			</div>
+			<!-- Main Content Row -->
+			<div class="four columns" style="margin-top: 2%; margin-left: 0;">
+				<p>Muskogee should take steps to tap the region’s current growth wave and reverse its household decline toward a decade of renewed growth.</p>
+				<p><b>600 net-new units by 2030</b>
+					<br>Reverse the tide: Gradually transition from losing 100 units annually to gaining 175 units per year.</p>
+				<p><b>1,500 net-new units by 2035</b>
+					<br>Hit a new stride: Maintain a new pace of at least 175 net new units per year.</p>				
+			</div>
+			<div class="eight columns" style="margin-top: 2%">
+				<iframe title="Muskogee housing production target" aria-label="Interactive line chart" id="datawrapper-chart-OH1SM" src="https://datawrapper.dwcdn.net/OH1SM/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="427" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}}))}();
+				</script>
+				<figcaption><b>Notes about the targets:</b>
+					<br>- These counts focus on units priced near or at market rate levels, meaning they could be developed without extensive subsidy. There is additional demand for housing at below-market prices if Muskogee can attract such projects (ex. LIHTC). However, given the limited supply of federal and state subsidy, this analysis does not assume a large number of subsidies housing units will be possible over the next decade.
+					<br>- The targets focus on net-new housing production. To the extent demolitions continue at or near their current pace, Muskogee will need to replace these lost units in addition to building the targeted number of units indicated above.
+				</figcaption>	
+			</div>
+		</div>
+
+		<div class="row insight-box" id="Barriers">
+			<!-- Heading Row -->
+			<div class="twelve columns" style="margin-bottom: 0%;">
+				<h3>Muskogee faces several barriers to housing access and production.</h3>
+				<p>This list of barriers to housing access and production is informed by the study’s detailed analysis and stakeholder focus group discussions. New policies and investments on the part of the City and other stakeholders should be designed to confront these challenges.</p>
+			</div>
+			<!-- Main Content Row -->
+			<div class="four columns" style="margin-top: 2%; margin-left: 0;">
+				<p><b>Land and infill challenges</b><br>
+				Little publicly owned land<br>
+				Disinterested private owners<br>
+				Development risk<br>
+				Limited developer pool</p>
+				<p><b>High development and financing costs</b><br>
+				Rising construction costs<br>
+				Low price expectations<br>
+				Elevated mortgage rates<br>
+				Increased financing costs</p>
+			</div>
+			<div class="four columns" style="margin-top: 2%">
+				<p><b>Constrained public resources</b><br>
+				Unused vouchers<br>
+				Limited municipal funding</p>
+				<p><b>Competition from other communities</b><br>
+				School preferences<br>
+				Commuting distance<br>
+				Perception challenges</p>
 			</div>
 		</div>
 	
+		<div class="row insight-box" id="Strategies">
+			<!-- Heading Row -->
+			<div class="twelve columns" style="margin-bottom: 0%;">
+				<h3>Housing priority action plan</h3>
+			</div>
+			<!-- Main Content Row -->
+			<div class="four columns" style="margin-top: 2%; margin-left: 0;">
+				<p>The following recommendations are designed to confront the barriers to housing production and capture the growth and market opportunities available to Muskogee over the next several years. These are explained in more detail in the Recommendations section of this study, including an analysis of their relative cost, priority, and the City or stakeholder agency that could be tasked with leading each.</p>
+			</div>
+			<div class="eight columns" style="margin-top: 2%">
+				<p><b>Launch a marketing campaign to promote Muskogee to developers.</b></p>
+				<p><b>Invest in resources, programs, and institutions that enhance Muskogee’s overall quality of life.</b></p>
+				<p><b>Promote housing in and around downtown</b></p>
+				<p><b>Encourage infill development in Old Township neighborhoods</b></p>
+				<p><b>Leverage the City’s incentive fund to catalyze more infill development opportunities.</b></p>
+				<p><b>Maximize access to existing affordable housing inventory and resources.</b></p>
+				<p><b>Catalyze new housing development in Muskogee’s suburban periphery.</b></p>
+				
+			</div>
+		</div>
+
 	</div>
 </div>
 
